--- a/package.json
+++ b/package.json
@@ -12,10 +12,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "docx": "^9.0.2",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mysql2": "^3.11.3",
-    "path": "^0.12.7",
-    "pdfkit": "^0.15.1",
-    "sqlite3": "^5.1.7"
+    "pdfkit": "^0.15.1"
   }
 }
